--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set-up key
-      run: mkdir ~/.sbt ; echo "realm=reposilite" >> ~/.sbt/.credentials ; echo "host=repository.japan-impact.ch" >> ~/.sbt/.credentials ; echo "user=${{ secrets.MavenUser }}" >> ~/.sbt/.credentials ; echo "password=${{ secrets.MavenPassword }}" >> ~/.sbt/.credentials ; cat ~/.sbt/.credentials
+      run: mkdir ~/.sbt ; echo "realm=Reposilite" >> ~/.sbt/.credentials ; echo "host=repository.japan-impact.ch" >> ~/.sbt/.credentials ; echo "user=${{ secrets.MavenUser }}" >> ~/.sbt/.credentials ; echo "password=${{ secrets.MavenPassword }}" >> ~/.sbt/.credentials ; cat ~/.sbt/.credentials
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v1
